hphp/test/zend/good/Zend/tests/errmsg_016.php.expectf

Fatal error: Method test::__isset() must take exactly 1 arguments in %s/errmsg_016.php on line 4
